--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "vite": "^4.4.8",
     "vite-plugin-monkey": "^3.4.0",
     "vue-tsc": "^1.8.8"
-  }
+  },
+  "packageManager": "pnpm@8.6.2"
 }
